[package]
name = "ocdscope"
version = "0.1.0"
edition = "2021"

[dependencies]

eframe = "0.28"
ecolor = "0.28"
egui_plot = "0.28"
egui-file-dialog = "0.6"

elf = "0.7"
log = "0.4"
simple_logger = "5.0"
telnet = "0.2"
thiserror = "1.0"
npyz = "0.8"
anyhow = "1.0"
libc = "0.2"

[profile.release]
strip = true
lto = true
