[package]
name = "ocdscope"
version = "0.1.0"
edition = "2021"

[dependencies]

eframe = "0.30"
ecolor = "0.30"
egui_plot = "0.30"
egui-file-dialog = "0.8"

elf = "0.7"
log = "0.4"
simple_logger = "5.0"
telnet = "0.2"
thiserror = "2.0"
npyz = "0.8"
anyhow = "1.0"
libc = "0.2"

[profile.release]
strip = true
lto = true
